tooling/nargo_cli/tests/snapshots/execution_failure/regression_7759/execute__tests__acir_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Assertion failed: Index out of bounds, array has size 2, but index was 2147483648
  ┌─ src/main.nr:3:5
  │
3 │     v7[index]
  │     ---------
  │
  = Call stack:
    1: main
            at src/main.nr:3:5

Failed assertion
