tooling/nargo_cli/tests/snapshots/execution_failure/regression_7759/execute__tests__brillig_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Assertion failed: Index out of bounds
  ┌─ src/main.nr:3:5
  │
3 │     v7[index]
  │     ---------
  │
  = Call stack:
    1. src/main.nr:3:5

Failed assertion
