tooling/nargo_cli/tests/snapshots/execution_failure/regression_7759/execute__tests__comptime_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Index out of bounds: 2147483648 is out of bounds for the array of length 2
  ┌─ src/main.nr:3:5
  │
3 │     v7[index]
  │     ---------
  │

Error interpreting main function
